# telegram_openai_voice

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: docker-image.yml
src/telegram_bot/: main.py
src/telegram_bot/api/: bot.py
src/telegram_bot/api/handlers/: audio.py  welcome.py
src/telegram_bot/db/: database.py  models.py
src/telegram_bot/service/: app.py
src/telegram_openai_voice/: main.py
src/telegram_openai_voice/api/: bot.py
src/telegram_openai_voice/api/handlers/: audio.py  welcome.py
src/telegram_openai_voice/conf/: config.yaml
src/telegram_openai_voice/db/: crud.py  database.py
tests/: test_app.py
tests/unit/api/: test_bot.py
tests/unit/service/: test_app.py
